...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Fiz-fC-Gie">
                                <rect key="frame" x="20" y="606.5" width="374" height="155.5"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6H-LE-VA3" customClass="RedRoundedButton" customModule="VA_Computing_Technical_Task" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="Go Mathematics">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="color" keyPath="background">
                                                <color key="value" red="0.70984455960000004" green="0.12532252569999999" blue="0.1167417971" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </userDefinedRuntimeAttribute>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="one-time-code"/>
                                            </textField>
                                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CqD-mp-2jD" customClass="RedRoundedButton" customModule="VA_Computing_Technical_Task" customModuleProvider="
                                                <rect key="frame" x="0.0" y="143.5" width="291" height="53.5"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                <state key="normal" title="Another Number">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="background">
                                                        <color key="value" red="0.70984455960000004" green="0.12532252569999999" blue="0.1167417971" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </userDefinedRuntimeAttribute>
...
                                                    <action selector="enterAnotherNumber:" destination="CKn-jl-fDQ" eventType="touchUpInside" id="c49-Kl-7y4"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JBY-aJ-WVz">
                                                <rect key="frame" x="0.0" y="217" width="291" height="54"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                <state key="normal" title="Choose The Operation">
                                                    <color key="titleColor" red="0.81568627449999997" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="done:" destination="CKn-jl-fDQ" eventType="touchUpInside" id="6jJ-34-DaB"/>
                                                </connections>
                                            </button>
...
                                                    </button>
                                                </subviews>
                                            </stackView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1n7-tq-e5h" customClass="RedRoundedButton" customModule="VA_Computing_Technical_Task" customModuleProvider="target">
                                                <rect key="frame" x="145.5" y="203" width="0.0" height="0.0"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                <state key="normal" title="Calculate">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="background">
                                                        <color key="value" red="0.70984455960000004" green="0.12532252569999999" blue="0.1167417971" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </userDefinedRuntimeAttribute>
...
